--- a/smart_strore_stm32/smart_store_stm32/Debug/makefile
+++ b/smart_strore_stm32/smart_store_stm32/Debug/makefile
@@ -61,7 +61,7 @@ main-build: smart_store_stm32.elf secondary-outputs
 
 # Tool invocations
 smart_store_stm32.elf smart_store_stm32.map: $(OBJS) $(USER_OBJS) C:\workingspace\mini-project_smart-store\smart_strore_stm32\smart_store_stm32\STM32F411RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "smart_store_stm32.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\workingspace\mini-project_smart-store\smart_strore_stm32\smart_store_stm32\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="smart_store_stm32.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "smart_store_stm32.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\workingspace\mini-project_smart-store\smart_strore_stm32\smart_store_stm32\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="smart_store_stm32.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
